# depolarizing-chatroom

./: .gitignore  Procfile  app.py  gunicorn-log-config.conf  requirements.txt  run.sh  setup.cfg  template.json  uvicorn-log-config.yml
.github/workflows/: style-check.yml
analysis/: attrition.ipynb  experiment_1_data_processing.ipynb
depolarizing_chatroom/: __init__.py  constants.py  logger.py  rephrasings.py  server.py  setup.py  socketio.py  socketio_util.py  suggest_rephrasings.py  util.py
depolarizing_chatroom/data/: crud.py  database.py  models.py  template.py
depolarizing_chatroom/routes/: __init__.py  auth.py  chatroom.py  dashboard.py  template.py  waiting_room.py  waiting_room_old.py
deradicalizing_chatroom/: __init__.py  constants.py  exceptions.py  suggest_rephrasings.py  util.py
deradicalizing_chatroom/data/: crud.py  models.py
deradicalizing_chatroom/routes/: __init__.py  admin.py  auth.py  chatroom.py  survey.py  template.py  waiting_room.py
migrations/versions/: fe484280aa78_initial_migration.py
static/css/: chatroom.css  stylesheet.css
static/js/: forms.js  (+1 more)
templates/: admin_login.html  boilerplate_bs.html  chatroom.html  chatroom_bot.html  chatroom_bs.html  data.html  eliza.html  error_modal.html  index.html  login.html  login_bs.html  polite.json  popup.html  question.html  question_bs.html  question_resume.html  restate.json  session.html  signup_bs.html  survey_builder.html  validate.json  waiting_room.html
tests/: test_client.py
web/: .gitignore  .yarnrc.yml  package-lock.json  package.json  tailwind.config.js
(+50 files in other folders)
