[metadata]
name = deradicalizing_chatroom
version = 0.1.0
url = https://github.com/BYU-PCCL/deradicalizing-chatroom
license = MIT
author = BYU PCCL

[options]
packages = find:
python_requires = >=3.8
install_requires =
    fastapi
    uvicorn[standard]
    python-multipart
    pydantic
    sqlalchemy
