[metadata]
name = depolarizing_chatroom
version = 0.1.0
url = https://github.com/BYU-PCCL/depolarizing-chatroom
license = MIT
author = BYU PCCL

[options]
packages = find:
python_requires = >=3.8
install_requires =
    fastapi
    uvicorn[standard]
    python-multipart
    python-dotenv
    pydantic
    sqlalchemy
    python-socketio
    fastapi-socketio @ git+https://github.com/pyropy/fastapi-socketio.git@07637485f8ff581a07fb12830a6bbcb2529e6b58
    numpy
    openai
    Jinja2
    itsdangerous
    redis
    fastapi-async-sqlalchemy
    asyncpg
    aiosqlite